Minor changes to times in swaidle and removed the gaps

--- a/sway_wm/config
+++ b/sway_wm/config
@@ -18,8 +18,8 @@ set $lockscreenbg ~/.config/sway/images/lockscreen_background.png
 default_border none
 
 # Stablish gaps between windows and from the screen edge
-gaps inner 5
-gaps outer 1
+#gaps inner 5
+#gaps outer 1
 
 # Start a terminal
 bindsym $mod+Return exec $term
